--- a/views/voter/verify.ejs
+++ b/views/voter/verify.ejs
@@ -35,7 +35,7 @@
             <div class="dropdown-menu">
               <p>
                 Logged in as <br />
-                <strong> <%= email %> </strong>
+                <strong> </strong><%= email %> </strong> 
               </p>
               <hr class="dropdown-line" />
               <a href="/voter/logout">Log Out</a>
@@ -65,8 +65,10 @@
         <div class="verify">
           <div class="row">
             <div class="column box-shadow">
+              <div class="receipt-header">
               <div class="d-flex">
                 <img src="/img/logo_tanikala.png" />
+              </div>
               </div>
               <br />
               <!-- <div class="d-flex justify-content-between">
