--- a/public/voter/css/review.css
+++ b/public/voter/css/review.css
@@ -95,19 +95,19 @@
 }
 
 .smallIcon {
+  display: flex;
+  flex-direction: row;
   width: 100%;
-  min-height: 120px; /* Prevents excessive shrinking */
-  height: auto;
+  height: 20%;
+  /* min-height: 120px; /* Prevents excessive shrinking */
+  /* height: auto; */ */
   border-radius: 0.8em;
   background-color: #563434;
   /* padding-left: 2%; */
   padding-top: 2%;
-  /* text-align: center; */
-}
-
-.smallIcon {
   border: 1px solid black;
   background-color: #9d2020;
+  /* text-align: center; */
 }
 
 .smallIcon div {
@@ -543,27 +543,47 @@
   }
 }
 
-.smallIcon {
+
+
+
+.ballot-choices input[type="radio"]:checked + label {
+    background: var(--color-selected-bg);
+    pointer-events: none; /* Prevent toggling */
+  }
+  .review-vote-card {
+    display: flex;
+    flex-direction: column;
+   width: 18vw;
+    border: 1px solid #ccc;
+    padding: 1rem;
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+    background: #faf2db;
+    box-shadow: 0 8px 24px 0 rgb(16 39 112 / 20%);
+
+  }
+
+
+  .review-vote-card h1 {
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+    color: white;
+    background-color: #1e66c4;
+  }
+
+
+ 
+.ssc-row {
+  display: flex;
+  flex-direction: row;
+  gap: 1.5%;
+  justify-content: center;
+}
+
+
+
+.ballot-choices {
   width: 100%;
-  padding: 0;
-  margin: 0;
-}
-
-.card {
-  width: 100%;
-}
-
-.smallIcon img {
-  width: 5em;
-  height: 5em; /* Match width for a perfect circle */
-  border-radius: 50%;
-  object-fit: cover; /* Ensures the image fills the circle without distortion */
-}
-
-.card .small-icon .Icon,
-.card .small-icon .Name,
-.card .small-icon .Roles,
-.card .small-icon .Description {
-  background-color: #b2eea0;
-  color: pink;
+  height: 100%;
 }
