--- a/public/voter/css/verify.css
+++ b/public/voter/css/verify.css
@@ -13,7 +13,8 @@
 }
 
 .receipt-container {
-  min-height: 130dvh;
+  display: flex;
+  flex-direction: row;
 }
 
 /* .content-main {
@@ -29,14 +30,14 @@
   justify-content: center;
 }
 .column {
-  border-radius: 1em;
   color: black;
   background-color: #faf2db;
-  border: 2px solid black;
+  border: 0.1rem dashed rgb(47, 40, 40);
   width: 40%;
-  padding: 2rem 3rem;
-  border-right: 1px dotted #000;
+
   height: 100%; /* Should be removed. Only for demonstration */
+  display: flex;
+  flex-direction: column;
 }
 
 /* Clear floats after the columns */
@@ -45,12 +46,9 @@
   display: table;
   clear: both;
 }
-.d-flex {
-  display: flex;
-}
 
-.d-flex img {
-  width: 50%;
+.receipt-header img {
+  width: 35%;
   height: auto;
 }
 .flex-col {
@@ -166,8 +164,55 @@ hr {
   font-size: 14px;
 }
 
+.receipt {
+  background-color: #faf2db;
+  display: flex;
+  flex-direction: row;
+  flex-basis: 25vw;
+  height: 10rem;
+}
+
 .receipt-header {
-  background-color: #1e66c4;
-  height: 20%;
+  background-color: #550c0a;
   width: 100%;
+  height: 10%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem;
+}
+
+.voting-receipt {
+  color: #f5ab29;
+  font-weight: bold;
+  font-size: 1.1rem;
+  padding-right: 2rem;
+  padding-top: 1rem;
+}
+
+.content {
+  padding: 1rem;
+  height: 10rem;
+}
+
+.receipt-subheader {
+  background-color: #e1ae5b;
+  width: 100%;
+  height: 1%;
+}
+
+.receipt-footer {
+  background-color: #a60212;
+  width: 100%;
+  height: 5%;
+}
+
+.column p {
+  font-size: 0.75rem !important;
+}
+
+.left {
+  text-align: left;
+  padding: 1rem;
 }
