--- a/views/voter/review.ejs
+++ b/views/voter/review.ejs
@@ -76,49 +76,73 @@
           <h3 class="ballot-header ballot-council">BulSU Supreme Student Council</h3>
 
           <div class="ssc-row">
-              <!-- Review Vote Card Markup -->
-              <div class="review-vote-card">
-                <!-- Display the position at the top -->
-                <h1><%= president.position %></h1>
+             <!-- Review Vote Card Markup for President -->
+<div class="review-vote-card">
+  <!-- Display the position at the top -->
+  <h1><%= president.position %></h1>
 
-                <div class="ballot-choices">
-                  <input class="ballot-choice candidate-radio" data-group="president" id="president-selected" type="radio" name="president" value="<%= JSON.stringify(president) %>" checked disabled />
-                  <label class="ballot-tile label-president" for="president-selected">
-                    <!-- Party Name -->
-                    <h4 class="party"><%= president.party %></h4>
-                    <!-- Candidate Image -->
-                    <img class="img-president" src="<%= president.image %>" alt="<%= president.name %>" />
-                    <!-- Candidate Name -->
-                    <h4 class="name"><%= president.name %></h4>
-                    <hr>
-                    <!-- Additional Candidate Info -->
-                    <p class="info"><%= president.moreInfo %></p>
-                  </label>
-                </div>
-              </div>
-            
-            
+  <div class="ballot-choices">
+    <div class="label-container label-president">
+      <input 
+        class="ballot-choice candidate-radio" 
+        data-group="president" 
+        id="president-selected" 
+        type="radio" 
+        name="president" 
+        value="<%= JSON.stringify(president) %>" 
+        checked 
+        disabled 
+      />
+      <label class="ballot-tile label-president" for="president-selected">
+        <!-- Party Name -->
+        <h4 class="party"><%= president.party %></h4>
+        <!-- Candidate Image -->
+        <img class="img-president" src="<%= president.image %>" alt="<%= president.name %>" />
+        <!-- Candidate Name -->
+        <h4 class="name"><%= president.name %></h4>
+        <hr />
+        <!-- Additional Candidate Info -->
+        <p class="info"><%= president.moreInfo %></p>
+      </label>
+    </div>
+  </div>
 </div>
-            <li>
-              <div class="card">
-                <div class="smallIcon">
-                  <div class="Icon">
-                    <img src="<%= vicePresident.image %>" alt="<%= vicePresident.name %>" />
-                  </div>
-                  <div class="Name">
-                    <h2><%= vicePresident.name %></h2>
-                  </div>
-                  <div class="Roles">
-                    <h2><%= vicePresident.position %></h2>
-                  </div>
-                  <div class="Description">
-                    <p><%= vicePresident.moreInfo %></p>
-                  </div>
-                </div>
-              </div>
-            </li>
-            <br />
-            <li>
+            
+<!-- Review Vote Card Markup for Vice President -->
+<div class="review-vote-card">
+  <!-- Display the position at the top -->
+  <h1><%= vicePresident.position %></h1>
+
+  <div class="ballot-choices">
+    <div class="label-container label-vice-president">
+      <input 
+        class="ballot-choice candidate-radio" 
+        data-group="vicePresident" 
+        id="vicePresident-selected" 
+        type="radio" 
+        name="vicePresident" 
+        value="<%= JSON.stringify(vicePresident) %>" 
+        checked 
+        disabled 
+      />
+      <label class="ballot-tile label-vice-president" for="vicePresident-selected">
+        <!-- Party Name -->
+        <h4 class="party"><%= vicePresident.party %></h4>
+        <!-- Candidate Image -->
+        <img class="img-vice-president" src="<%= vicePresident.image %>" alt="<%= vicePresident.name %>" />
+        <!-- Candidate Name -->
+        <h4 class="name"><%= vicePresident.name %></h4>
+        <hr />
+        <!-- Additional Candidate Info -->
+        <p class="info"><%= vicePresident.moreInfo %></p>
+      </label>
+    </div>
+  </div>
+</div>
+</div>
+            
+            
+            <l  i>
               <div class="senator-cards">
                 <% if (Array.isArray(senator)) { %> <% senator.forEach(function(senatorCandidate) { %>
                 <div class="card">
