--- a/views/voter/verify.ejs
+++ b/views/voter/verify.ejs
@@ -60,32 +60,43 @@
         <img src="/img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
       </div>
 
+      <!-- <div class="receipt">
+        <div class="receipt-header"> yes</div>
+          <div class="receipt-subheader">no</div>
+            <div class="receipt-content">
+                hi
+            </div>
+          <div class="footer">maybe</div>
+      </div> -->
+
+
       <!-- Receipt Container -->
       <div id="receiptContainer" class="content-main receipt-container">
         <div class="verify">
           <div class="row">
             <div class="column box-shadow">
               <div class="receipt-header">
-              <div class="d-flex">
+            
                 <img src="/img/logo_tanikala.png" />
+                <div class="voting-receipt"> VOTING RECEIPT</div>
+            
               </div>
-              </div>
-              <br />
-              <!-- <div class="d-flex justify-content-between">
-                <strong>Student Copy</strong>
-              </div> -->
-              <div class="d-flex flex-col justify-content-center">
-                <h3 class="align-center title">Voting Receipt</h3>
-              </div>
+              <div class="receipt-subheader"></div>
+              
+              
               <br />
               <hr />
-              <br />
-              <div class="d-flex flex-col justify-content-center">
-                <h4>
-                  Voter ID: <br />
-                  <span class="hash-break"><%= voterHash %></span>
-                </h4>
-              </div>
+              
+              <div class="left">
+
+                 <p>Voter ID: <%= voterHash %></p> 
+                 <p>College: <%= voterCollege %></p>
+                 <p>Program: <%= voterProgram %></p>
+                 
+                 </div>
+             
+             
+              <hr />
               <br />
               <!-- Candidate Selections Table -->
               <table>
@@ -131,15 +142,9 @@
               </table>
               <hr />
               <br />
-              <div class="d-flex justify-content-between">
-                <strong>College</strong>
-                <span id="collegeDisplay"><%= voterCollege %></span>
-              </div>
+              
               <hr />
-              <div class="d-flex justify-content-between">
-                <strong>Program</strong>
-                <span><%= voterProgram %></span>
-              </div>
+             
               <br />
               <hr />
               <div class="d-flex flex-col">
@@ -155,17 +160,21 @@
                 <span>Date:</span>
                 <span><%= new Date().toLocaleString() %></span>
               </div>
+                <div class="receipt-footer"></div>
             </div>
+           
           </div>
+          
         </div>
-      </div>
+       
+    
 
       <!-- Export Receipt as Image -->
       <div style="text-align: center; margin: 20px">
         <button id="exportBtn" style="border-radius: 6px; padding: 10px 20px; font-size: 16px" class="button-save">Export Receipt as Image</button>
       </div>
     </div>
-
+</div>
     <footer class="footer">
       <div class="footer-left">
         <img src="/img/calendar.png" class="footer-img" />
