--- a/public/voter/css/verify.css
+++ b/public/voter/css/verify.css
@@ -32,7 +32,7 @@
 .column {
   color: black;
   background-color: #faf2db;
-  border: 0.1rem dashed rgb(47, 40, 40);
+  border: 0.1rem dashed rgb(91, 84, 84);
   width: 40%;
 
   height: 100%; /* Should be removed. Only for demonstration */
@@ -204,8 +204,13 @@ hr {
 
 .receipt-footer {
   background-color: #a60212;
+  text-align: center;
   width: 100%;
-  height: 5%;
+  height: 8%;
+  color: white;
+}
+
+.receipt-footer p {
 }
 
 .column p {
