--- a/views/voter/verify.ejs
+++ b/views/voter/verify.ejs
@@ -98,6 +98,7 @@
              
               <hr />
               <br />
+              <div class="election-title">BulSU Student Goverment Elections 2025-2026</div>
               <!-- Candidate Selections Table -->
               <table>
                 <thead>
@@ -151,10 +152,12 @@
                 <p>Voting Date and Time: <%= new Date().toLocaleString() %></p>
                 <p>Transaction Hash: <%= txHash %></p>
                 <p>Status: Vote successfully recorded on blockchain</p> 
-              <br />
-               <hr />
+             
+               
         
               </div>
+              <hr />
+              <br />
                 <div class="receipt-footer"><p>Thank you for using TANIKALA. With our blockchain technology, your vote stays secure, anonymous, and is counted accurately.</p></div>
             </div>
            
