--- a/views/voter/review.ejs
+++ b/views/voter/review.ejs
@@ -60,7 +60,7 @@
       <div class="main-first">
         <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
         <div class="first-text">
-          <h2 class="title"><%= electionConfig.electionName %><br />S.Y. 2025 - 2026</h2>
+          <h2 class="title"><%= electionConfig.electionName %></h2>
         </div>
         <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
       </div>
