--- a/public/css/index.css
+++ b/public/css/index.css
@@ -451,7 +451,7 @@ button {
   }
 
   .header {
-    width: 100%;
+    width: 100vw;
     flex-direction: row;
     height: auto;
     height: 30dvh;
@@ -491,7 +491,7 @@ button {
     padding: 0;
     margin: 0;
     height: 70dvh;
-    width: 100%;
+    width: 100vw;
   }
 
   .content-title {
